# mtc-casilla-bot

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  PROMPT_INICIAL.md  README.md  ROADMAP.md  pyproject.toml
.claude/: settings.json
.claude/agents/: backend-python-agent.md  cloud-google-agent.md  frontend-agent.md  qa-agent.md  templates-agent.md
.claude/commands/: reprocess.md  run-bot.md  serve.md  test-login.md
.claude/hooks/: PostToolUse.sh  PreCompact.sh  SessionStart.sh
.claude/rules/: credentials.md  playwright.md
.claude/skills/ai-extractor/: SKILL.md
.claude/skills/appscript-api/: SKILL.md
.claude/skills/drive-uploader/: SKILL.md
.claude/skills/mtc-scraper/: SKILL.md
.claude/skills/obsidian-writer/: SKILL.md
.claude/skills/pdf-pipeline/: SKILL.md
.claude/skills/response-generator/: SKILL.md
.github/workflows/: deploy-pages.yml
appscript/: Code.gs  README.md  appsscript.json
data/credentials/: rucs.csv.example
data/templates/: README.md
docs/: DEPLOYMENT.md  GUIA_OPERACIONES.md  SHEET_SCHEMA.md  TEMPLATE_CATALOG.md  TEMPLATE_SYSTEM_PLAN.md
frontend/: README.md  app.js  index.html  styles.css
scripts/: Abrir-Panel-MTC.bat  bootstrap_sheet.py  debug_scraper_ui.py  fill_rucs_sheet.py  instalar-tarea-programada.ps1  launcher.pyw  run-daily.ps1
src/mtc_bot/: __init__.py  ai_extractor.py  cli.py  config.py  manual_server.py  models.py  pdf_pipeline.py
src/mtc_bot/google/: __init__.py  drive_uploader.py  sheets_writer.py
src/mtc_bot/scraper/: __init__.py  downloader.py  inbox.py  login.py
tests/: conftest.py  test_ai_extractor.py  test_pdf_pipeline.py  test_smoke.py
