[project]
name = "mtc-casilla-bot"
version = "0.1.0"
description = "Automatización de notificaciones de la Casilla Electrónica del MTC (Perú) con IA, Drive, Apps Script y dashboard web"
authors = [
    {name = "Yubert Canaza"},
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
dependencies = [
    # ─ Scraper ─
    "playwright>=1.45.0",
    "tenacity>=8.5.0",
    # ─ PDFs ─
    "pypdf>=4.3.0",
    "pdfplumber>=0.11.0",
    # ─ IA ─
    "openai>=1.40.0",          # cliente compatible para DeepSeek
    "httpx[http2]>=0.27.0",     # cliente para Gemini
    # ─ Google Workspace ─
    "google-api-python-client>=2.140.0",
    "google-auth>=2.32.0",
    "google-auth-oauthlib>=1.2.0",
    "gspread>=6.1.0",
    # ─ Modelos / config ─
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    # ─ CLI ─
    "typer>=0.12.0",
    "rich>=13.7.0",
    # ─ Fechas y locale ─
    "babel>=2.16.0",
    "holidays>=0.55",
    "tzdata>=2024.1",
    # ─ Markdown / YAML / Plantillas ─
    "pyyaml>=6.0",
    "python-slugify>=8.0.0",
    "jinja2>=3.1.0",            # render de plantillas
    "python-frontmatter>=1.1.0",  # parseo de frontmatter en .md
]

[project.optional-dependencies]
# Dashboard local opcional (alternativa al frontend estático)
serve = [
    "fastapi>=0.112.0",
    "uvicorn[standard]>=0.30.0",
]
# Exportación a Word (Fase 4)
export = [
    "python-docx>=1.1.0",
]
# Tests
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
mtc-bot = "mtc_bot.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mtc_bot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "ASYNC", "S", "A", "RET", "SIM", "PL",
]
ignore = [
    "S101",
    "PLR0913",
    "S311",  # random no usado para crypto en este proyecto
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106", "PLR2004", "PLC0415"]
"src/mtc_bot/cli.py" = ["PLC0415"]  # imports defensivos dentro de try/except por design

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
